# brave-search

./: README.md  pyproject.toml
brave_search/: brave.py
